# thesis_example

./: .gitignore  Himmelblau.xml  README.md  Wrapping rotation.xml  himmelblau.py
codac_capd/: 14_pendulum.cpp  15_lorenz.cpp  16_spiral.cpp  17_dubins.cpp  18_cshape.cpp  22_area_reach.cpp  CMakeLists.txt  wrappers_utils.h
codac_capd/datasets/: heading_following_west_1.cdc
codac_capd/wrappers/: cshape_wrappers.txt  dubins_wrappers.txt  spiral_wrappers.txt
codac_cgal/: 08_triangulate_parallelepiped_circle.cpp  13_peibos_triangulate.cpp  23_validation.cpp  25_validation.cpp  CMakeLists.txt  cgal_tools.h  conform.cpp  triangulate_tools.h
codac_only/: 00_wrapping.py  01_sivia.py  02_himmelblau.py  03_contractor_programming.py  04_paving.py  04_zonotope.py  05_paving.py  05_zonotope.py  06_parallelepiped_contractor.py  07_paving_parallelepiped_circle.py  09_parallelepiped_enclosure.py  10_parallelepiped_enclosure_set_valued.py  11_peibos.py  12_PEIBOS_convergence_order.py  19_rob_arm_sing.cpp  20_rob_arm.cpp  21_rob_arm_unvalidated.cpp  23_box_chains.cpp  24_parallelepiped_chains.cpp  25_parallelepiped_chains.cpp  25_validation.cpp  CMakeLists.txt  Pave_with_contractors.xml  Paving_of_circle_parallelelepiped.xml  Paving_of_circle_parallelelepiped_in_out.xml  Zonotope Sum.xml  constraint_programming.xml
no_dependency/: 12_peibos_convergence_order.py
save/: Himmelblau.xml  Pave_with_contractors.xml  Pave_without_contractors.xml  Paving_of_CtcParallelepiped.xml  Paving_of_CtcParallelepiped.xml.autosave.ipe  SIVIA_01.xml  SIVIA_03.xml  Wrapping rotation.xml  Zonotope Sum.xml  Zonotope.xml  triangulation_of_circle_parallelepiped.xml  triangulation_of_circle_parallelepiped.xml.autosave.ipe  triangulation_of_circle_parallelepiped_polygon_inside.xml  triangulation_of_circle_parallelepiped_polygon_outside.xml
